@@ -5,7 +5,7 @@
 import re, time, sys
 
 def usage():
-    print('''usage:  python2 man.py manpage.1.md manpage.1 MACRO="value"...
+    print('''usage:  python3 man.py manpage.1.md manpage.1 MACRO="value"...
 
 This is a rough preprocessor to convert a subset of Markdown to man pages.
 A summary of the markup commands you can use in your src file:
@@ -18,7 +18,7 @@ A summary of the markup commands you can use in your src file:
     {{MACRO}}
     ```
     example code block
-    ``` 
+    ```
     ''')
     sys.exit(1)
 
@@ -30,9 +30,9 @@ for arg in sys.argv[3:]:
     m = re.match(r'([A-Z][A-Za-z0-9_]+)=(.*)', arg)
     if m:
         macros[m.group(1)] = m.group(2)
-    else: 
+    else:
         usage()
-        
+
 repls = [
     (r'^###? +(.+?)$', r'.SH "\1"'),         # ## heading
     (r'\*\*(.+?)\*\*', r'\\fB\1\\fR'),       # **bold**
@@ -41,14 +41,14 @@ repls = [
     (r'^(.+?) -$',     r'\n.TP\n.B \1'),     # definition -
     (r'^# +(.+?) */ *(.+?) */ *(.+?) *$',
         r'.TH \1 "{{DATE}}" "\2" "\3"'),     # man page heading
-    (r'{{(.+?)}}', 
+    (r'{{(.+?)}}',
         lambda m: macros[m.group(1)])   ]    # {{macro}} substitution
 
 
 with open(sys.argv[1], "r") as f:
     page = f.read()
 
-# split into text and code example sections, 
+# split into text and code example sections,
 # odd-numbered sections will be code:
 sections = re.split('```[A-Za-z]*', page)
 
@@ -59,5 +59,5 @@ with open(sys.argv[2], "w") as f:
                 s = re.sub(pattern, repl, s, flags=re.MULTILINE)
         else:  # code section
             s = s.replace('\n', '\n    ')
-            s = '\n.nf\n' + s + '\n.fi\n'   
+            s = '\n.nf\n' + s + '\n.fi\n'
         f.write(s)
