@@ -92,7 +92,7 @@
 
 \lstdefinelanguage{AlgolW}{%
   keywords={true,false,null,integer,real,complex,logical,bits,string,%
-    reference,long,,array,procedure,record,begin,end,if,then,else,case,%
+    reference,long,array,procedure,record,begin,end,if,then,else,case,%
     of,div,rem,shr,shl,is,abs,long,short,and,or,goto,go
     to,for,step,until,%
     do,while,comment,value,result,assert,algol,fortran},%
